--- a/index.html
+++ b/index.html
@@ -165,24 +165,24 @@
             {"number": 1, "step": "(R U' R)(U R U R)(U' R' U' R2)", "link": "BV11jqVBzEGQ", "imagePath": "images/image_PLL_001.bmp", "difficulty": "medium", "tags": ["pll", "right", "up", "counterclockwise"]},
             {"number": 2, "step": "(R2' U)(R U R' U')(R' U')(R' U R')", "link": "BV1sjqVBzEka", "imagePath": "images/image_PLL_002.bmp", "difficulty": "medium", "tags": ["pll", "right", "up", "counterclockwise"]},
             {"number": 3, "step": "L2(l'2 U)L2(l'2 U2)L2(l'2 U)L2 l2", "link": "BV1sjqVBzE2e", "imagePath": "images/image_PLL_003.bmp", "difficulty": "hard", "tags": ["pll", "up"]},
-            {"number": 4, "step": "(U R'U')(R U'R)(U R U')(R'U R U)(R2 U')(R'U)", "link": "", "imagePath": "images/image_PLL_004.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 5, "step": "x' R2 D2(R' U' R)D2(R' U R')", "link": "", "imagePath": "images/image_PLL_005.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 6, "step": "(l U' R)D2(R' U R)D2 R2", "link": "", "imagePath": "images/image_PLL_006.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 7, "step": "x'(R U' R' D)(R U R')u2'(R' U R)D(R' U' R)", "link": "", "imagePath": "images/image_PLL_007.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 8, "step": "(R U R' U')(R' F)(R2 U' R' U')(R U R' F')", "link": "", "imagePath": "images/image_PLL_008.bmp", "difficulty": "hard", "tags": ["pll", "right", "front", "up"]},
-            {"number": 9, "step": "U'(R'U R U' R'2 b')x(R'U R)y'(R U R' U' R2)", "link": "", "imagePath": "images/image_PLL_009.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
-            {"number": 10, "step": "(R' U R' U') yx2 (R' U R' U'R2) xz'(R'U'R U R)", "link": "", "imagePath": "images/image_PLL_010.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
-            {"number": 11, "step": "F(R U'R' U')(R U R' F')(R U R' U')(R' F R F')", "link": "", "imagePath": "images/image_PLL_011.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 12, "step": "z(U' R D')(R2 U R' U' R2 U)z'(R U')", "link": "", "imagePath": "images/image_PLL_012.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 13, "step": "(R U R'F')(R U R'U')(R'F R2 U'R'U')", "link": "", "imagePath": "images/image_PLL_013.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 14, "step": "(R' U2)(R U'U')(R' F R U R' U')(R'F' R2 U')", "link": "", "imagePath": "images/image_PLL_014.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 15, "step": "(R U'U')(R' U2)(R B' R' U')(R U R B R2' U)", "link": "", "imagePath": "images/image_PLL_015.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 16, "step": "(R2' u' R U' R)(U R' u)(R2 f R' f')", "link": "", "imagePath": "images/image_PLL_016.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 17, "step": "(R U R')y'(R2' u' R U')(R' U R' u R2)", "link": "", "imagePath": "images/image_PLL_017.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
-            {"number": 18, "step": "(R2 u)(R' U R' U')(R u') (R2' F' U F)", "link": "", "imagePath": "images/image_PLL_018.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 19, "step": "(R' d' F)(R2 u)(R' U)(R U' R u' R2)", "link": "", "imagePath": "images/image_PLL_019.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
-            {"number": 20, "step": "z(R' U R')z'(R U2 L' U R') z(U R')z'(R U2 L' U R')", "link": "", "imagePath": "images/image_PLL_020.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
-            {"number": 21, "step": "z(U'R D')(R2 U R'U')z'(R U R') z(R2 U R')z'(R U')", "link": "", "imagePath": "images/image_PLL_021.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]}
+            {"number": 4, "step": "(U R'U')(R U'R)(U R U')(R'U R U)(R2 U')(R'U)", "link": "BV1XrqoB3EH9", "imagePath": "images/image_PLL_004.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 5, "step": "x' R2 D2(R' U' R)D2(R' U R')", "link": "BV1XrqoB3E4T", "imagePath": "images/image_PLL_005.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 6, "step": "(l U' R)D2(R' U R)D2 R2", "link": "BV1g1qoBzEZr", "imagePath": "images/image_PLL_006.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 7, "step": "x'(R U' R' D)(R U R')u2'(R' U R)D(R' U' R)", "link": "BV131qoBzEwD", "imagePath": "images/image_PLL_007.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 8, "step": "(R U R' U')(R' F)(R2 U' R' U')(R U R' F')", "link": "BV1D1qoBBEnL", "imagePath": "images/image_PLL_008.bmp", "difficulty": "hard", "tags": ["pll", "right", "front", "up"]},
+            {"number": 9, "step": "U'(R'U R U' R'2 b')x(R'U R)y'(R U R' U' R2)", "link": "BV1g1qoBzEoq", "imagePath": "images/image_PLL_009.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
+            {"number": 10, "step": "(R' U R' U') yx2 (R' U R' U'R2) xz'(R'U'R U R)", "link": "BV1D1qoBBEEe", "imagePath": "images/image_PLL_010.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
+            {"number": 11, "step": "F(R U'R' U')(R U R' F')(R U R' U')(R' F R F')", "link": "BV1S1qoBBED5", "imagePath": "images/image_PLL_011.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 12, "step": "z(U' R D')(R2 U R' U' R2 U)z'(R U')", "link": "BV1D1qoBBE5T", "imagePath": "images/image_PLL_012.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 13, "step": "(R U R'F')(R U R'U')(R'F R2 U'R'U')", "link": "BV1D1qoBBE4X", "imagePath": "images/image_PLL_013.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 14, "step": "(R' U2)(R U'U')(R' F R U R' U')(R'F' R2 U')", "link": "BV1D1qoBBEhN", "imagePath": "images/image_PLL_014.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 15, "step": "(R U'U')(R' U2)(R B' R' U')(R U R B R2' U)", "link": "BV1g1qoBzEao", "imagePath": "images/image_PLL_015.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 16, "step": "(R2' u' R U' R)(U R' u)(R2 f R' f')", "link": "BV1S1qoBBES8", "imagePath": "images/image_PLL_016.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 17, "step": "(R U R')y'(R2' u' R U')(R' U R' u R2)", "link": "BV13yqoBgENu", "imagePath": "images/image_PLL_017.bmp", "difficulty": "hard", "tags": ["pll", "rotation", "right", "up"]},
+            {"number": 18, "step": "(R2 u)(R' U R' U')(R u') (R2' F' U F)", "link": "BV1DyqoBuErV", "imagePath": "images/image_PLL_018.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 19, "step": "(R' d' F)(R2 u)(R' U)(R U' R u' R2)", "link": "BV1DyqoBuEfY", "imagePath": "images/image_PLL_019.bmp", "difficulty": "hard", "tags": ["pll", "front", "right", "up"]},
+            {"number": 20, "step": "z(R' U R')z'(R U2 L' U R') z(U R')z'(R U2 L' U R')", "link": "BV1DyqoBuEzu", "imagePath": "images/image_PLL_020.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]},
+            {"number": 21, "step": "z(U'R D')(R2 U R'U')z'(R U R') z(R2 U R')z'(R U')", "link": "BV1DyqoBuEzD", "imagePath": "images/image_PLL_021.bmp", "difficulty": "hard", "tags": ["pll", "right", "up", "counterclockwise"]}
         ]
     };
 
